--- a/FlyButterfly/Views/Admin/Projects.cshtml
+++ b/FlyButterfly/Views/Admin/Projects.cshtml
@@ -18,7 +18,7 @@
                         <button class="btnLesh" type="submit" name="id" value="@pr.ID">Удалить</button>
 
                         @pr.Name
-                        <a class="nav-link text-dark" asp-controller="Admin" asp-action="Risks" asp-route-id="@pr.ID">Настроить</a>
+                        <a class="nav-link text-dark" asp-controller="Admin" asp-action="Risks" asp-route-projectId="@pr.ID">Настроить</a>
                     </td>
                 </tr>
             }
