--- a/FlyButterfly/Views/Shared/_Layout.cshtml
+++ b/FlyButterfly/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            <a> НУ ЧТО ЛАВРУХА ДЕЛАЕМ ЭТУ ХУЙНЮ ДО ПОНЕДЕЛЬНИКА</a>
+            <a>Кто не рискует, тот не пьёт шампанское!</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
