--- a/FlyButterfly/Views/Admin/AdminPanel.cshtml
+++ b/FlyButterfly/Views/Admin/AdminPanel.cshtml
@@ -1,11 +1,13 @@
-﻿@model UserModel 
-<div>
+﻿@model UserModel
 
-    Здравствуйте, @Model.Name !
-    Твоя роль -   @Model.Role.Name
+<h1>
+    Мой профиль
+</h1>
 
-    Ваше имя
-    @Model.Name
-    Ваша фамилия
-    @Model.Surname
-</div>
+
+<ul class="MORDER">
+    <li>
+        Вы - Админ
+    </li>
+
+</ul>
