--- a/FlyButterfly/Views/Home/Index.cshtml
+++ b/FlyButterfly/Views/Home/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Управление рисками";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1 class="text-center">  Управление рисками  </h1>
