--- a/FlyButterfly/Views/Shared/_Layout.cshtml
+++ b/FlyButterfly/Views/Shared/_Layout.cshtml
@@ -11,50 +11,50 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FlyButterfly</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Управление рисками</a>
+                
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Меню</a>
-                        </li>
+
 
                         @if (User.Identity.IsAuthenticated)
                         {
                             if (User.IsInRole("user"))
                             {
                                 <li class="nav-item">
-
-                                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Личный кабинет</a>
+                                    <a class="navbar-brand" asp-area="" asp-controller="User" asp-action="UserPanel">Личный кабинет</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="navbar-brand" asp-area="" asp-controller="User" asp-action="Settings">Настройки</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="navbar-brand" asp-area="" asp-controller="User" asp-action="Projects">Проекты</a>
                                 </li>
                             }
 
                             else if (User.IsInRole("admin"))
                             {
                                 <li class="nav-item">
-                                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Личный кабинет</a>
+                                    <a class="navbar-brand" asp-area="" asp-controller="Admin" asp-action="AdminPanel">Личный кабинет</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Professions">Профессии</a>
+                                    <a class="navbar-brand" asp-area="" asp-controller="Admin" asp-action="Professions">Профессии</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Projects">Проекты</a>
+                                    <a class="navbar-brand" asp-area="" asp-controller="Admin" asp-action="Projects">Проекты</a>
                                 </li>
                             }
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Выйти</a>
+                                <a class="navbar-brand" asp-area="" asp-controller="Account" asp-action="Logout">Выйти</a>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Зарегистрироваться</a>
+                                <a class="navbar-brand" asp-area="" asp-controller="Account" asp-action="Register">Зарегистрироваться</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Войти</a>
+                                <a class="navbar-brand" asp-area="" asp-controller="Account" asp-action="Login">Войти</a>
                             </li>
                         }
 
